Corrected spacing and alignment of maxhit

--- a/src/css/overlay.css
+++ b/src/css/overlay.css
@@ -192,5 +192,7 @@
 }
 .row .maxhit {
   font-size: 0.85em;
-  margin-top: -7px;
+  margin-top: -0.3em;
+  margin-left: -0.8em;
+  text-align: left;
 }
